--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@types/vue-the-mask": "^0.11.5",
     "@vitejs/plugin-vue": "^4.5.2",
     "sass": "^1.69.7",
     "vite": "^5.0.10"
