--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "vue": "^3.3.11",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/vue-the-mask": "^0.11.5",
     "@vitejs/plugin-vue": "^4.5.2",
+    "prettier": "^3.2.2",
     "sass": "^1.69.7",
     "vite": "^5.0.10"
   }
